# CampusAgent

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  CONTRIBUTING.md  MEMORY.md  Makefile  README.md  SECURITY.md  compose.public-demo.yaml  compose.yaml  package.json  pnpm-lock.yaml
apps/: README.md
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_user_auth_tables.py  0003_organization_membership_tables.py  0004_conversation_message_tables.py  0005_agent_memory_consent_audit_tables.py  0006_model_gateway_node_tables.py  0007_scene_core_tables.py  0008_contact_relationships.py  0009_student_phone_agent_code.py  0010_workspace_task_threads.py  0011_agent_model_route.py  0012_scene_organization_binding.py  README.md
apps/api/src/: config.py  dependencies.py  main.py
apps/api/src/cache/: __init__.py  redis.py
apps/api/src/db/: __init__.py  base.py  repositories.py  session.py  time.py  types.py
apps/api/src/demo/: __init__.py  data.py  reset.py  routes.py  security.py  seed.py
apps/api/src/events/: __init__.py  bus.py
apps/api/src/middleware/: env_validation.py  request_context.py
apps/api/src/realtime/: __init__.py  api.py  connection_manager.py  events.py  pubsub.py
apps/api/src/schemas/: envelope.py
apps/api/src/utils/: clock.py  errors.py  logging.py  metrics.py  redaction.py
apps/api/tests/: conftest.py
apps/api/tests/architecture/: __init__.py  test_module_boundaries.py
(+682 files in other folders)
